Day 1 add tests